<resources>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">Maps Activity</string>
    <string name="app_name">FarmaApp2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Lunes">L</string>

    <string name="google_map_key">AIzaSyBLOTxH3QWbX6x34KvAOjkjzS_GodPC0v8</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main">Notepad</string>
    <string name="title_activity_second">Edit Note</string>


    <string name="no_notes">No Notes Yet</string>
    <string name="menu_insert">Add Note</string>
    <string name="menu_about">About</string>
    <string name="menu_delete">Borrar Medicamento</string>
    <string name="menu_desactivarAlarma">Desactivar Alarmas del Medicamento</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="confirmar">Confirmar</string>
    <string name="edit_note">Edit Note</string>
    <string name="button_ok">OK</string>

    <string name="hello">Hello, %1$s!</string>

    <string name="channel_id">AppMovChannelID</string>
    <string name="channel_name">AppMovChannel</string>
    <string name="channel_description">AppMov notification channel</string>
    <string name="alarm">com.uc3m.it.helloalarmappmov.ALARM</string>
    <string name="via_administracion"></string>
    <string name="actual_position">Actual Position</string>
    <string name="emailexample_gmail_com">emailexample@gmail.com</string>
    <string name="contrase_a">contraseña</string>
    <string name="repetir_contrase_a">repita la contraseña</string>
    <string name="acceder">Iniciar Sesión</string>
    <string name="registrarme">Registrarme</string>
    <string name="Subtitulo_Log_In">para sincronizar tus medicamentos con el resto de tus dispositivos</string>
    <string name="inicia_sesion">Inicia Sesion</string>
    <string name="correo_electronico_del_usuario">Correo electronico del Usuario</string>
    <string name="mensaje_bienvenida_usuario">¡Hola, Usuario!</string>
    <string name="button_cerrar_sesion">Pulse aquí para cerrar sesión</string>
    <string name="button_volver_atras">Pulse aquí para volver atras</string>
    <string name="cerrar_sesion">Si, cerrar sesión</string>
    <string name="cancelar">cancelar</string>
    <string name="refrescar_medicamentos">Refrescar medicamentos</string>
</resources>